data/derived/sp14/progs/unify/prog0485.ml.out
Characters 26-31:
  let _ = bigAdd ( (bigAdd [1,2,3] [2,3,4]) (mulByDigit (i-2) l) );;
                            ^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type int
